prices range changed

--- a/WebContent/en/prezzi.html
+++ b/WebContent/en/prezzi.html
@@ -77,11 +77,11 @@
 				<tbody>
 					<tr id="room1">
 						<th><strong>Room "Duomo"</strong></th>
-						<td><span>60 €</span><em>50 € single use</em><em>75 € triple</em></td>
+						<td><span>40-100 €</span><em>-10 € single use</em><em>+10 € triple</em></td>
 					</tr>
 					<tr id="room2">
 						<th><strong>Room "Castello"</strong></th>
-						<td><span>50 €</span><em>40 € singole use</em><em>65 € triple</em></td>
+						<td><span>40-100 €</span><em>-10 € singole use</em><em>+10 € triple</em></td>
 					</tr>
 				</tbody>
 			</table>
