--- a/WebContent/it/prezzi.html
+++ b/WebContent/it/prezzi.html
@@ -81,19 +81,19 @@
 				<tbody>
 					<tr id="room1">
 						<th><strong>Camera "Duomo"</strong></th>
-						<td><span>60 €</span><em>50 € uso singola</em><em>75 €
+						<td><span>40-100 €</span><em>-10 € uso singola</em><em>+10 €
 								uso tripla</em></td>
 					</tr>
 					<tr id="room2">
 						<th><strong>Camera "Castello"</strong></th>
-						<td><span>50 €</span><em>40 € uso singola</em><em>65 €
+						<td><span>40-100 €</span><em>-10 € uso singola</em><em>+10 €
 								uso tripla</em></td>
 					</tr>
 				</tbody>
 			</table>
 
 			<p>Per soggiorni di almeno 3 notti sono previsti sconti da
-				concordare anticipatamente. Letto aggiuntivo: aumento di 15€ sul
+				concordare anticipatamente. Letto aggiuntivo: aumento di 10€ sul
 				costo della camera.</p>
 			<p>Tassa di soggiorno: 2 € al giorno per persona non compresi nel prezzo.</p>
 
