new grazy photos

--- a/WebContent/en/camere.html
+++ b/WebContent/en/camere.html
@@ -90,62 +90,105 @@
 			<aside>
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
-						data-gallery-id="5874"><h3>Room “Duomo”</h3> <img
+						data-gallery-id="1529"><h3>Room “Duomo”</h3> <img
 							src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
-						data-gallery-id="5826"><h3>Room “Castello”</h3> <img
+						data-gallery-id="5828"><h3>Room “Castello”</h3> <img
 							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
 			<figure id="gallery">
+
+				<a href="../media/img/photos/galleria/IMGS5880.jpg"
+					data-milkslide="galleria" data-gallery-id="5880"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1529.jpg"
+					data-milkslide="galleria" data-gallery-id="1529"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1520.jpg"
+					data-milkslide="galleria" data-gallery-id="1520"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1539.jpg"
+					data-milkslide="galleria" data-gallery-id="1539"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1547.jpg"
+					data-milkslide="galleria" data-gallery-id="1547"
+					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5874.jpg"
 					data-milkslide="galleria" data-gallery-id="5874"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/IMGS5876.jpg"
+					data-milkslide="galleria" data-gallery-id="5876"
+					title="Baathroom of room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/IMGS5877.jpg"
+					data-milkslide="galleria" data-gallery-id="5877"
+					title="Baathroom of room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1549.jpg"
+					data-milkslide="galleria" data-gallery-id="1549"
+					title="Room 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1551.jpg"
+					data-milkslide="galleria" data-gallery-id="1551"
 					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5875.jpg"
 					data-milkslide="galleria" data-gallery-id="5875"
 					title="Room 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5876.jpg"
-					data-milkslide="galleria" data-gallery-id="5876"
-					title="Room 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5877.jpg"
-					data-milkslide="galleria" data-gallery-id="5877"
-					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5878.jpg"
 					data-milkslide="galleria" data-gallery-id="5878"
-					title="Room 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5880.jpg"
-					data-milkslide="galleria" data-gallery-id="5880"
-					title="Room 'Duomo'"></a>
+					title="Baathroom of room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5934.jpg"
 					data-milkslide="galleria" data-gallery-id="5934"
-					title="Room 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5935.jpg"
-					data-milkslide="galleria" data-gallery-id="5935"
 					title="Room 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS6177.jpg"
 					data-milkslide="galleria" data-gallery-id="6177"
 					title="Room 'Duomo'"></a>
+
+				<a href="../media/img/photos/galleria/IMGS5828.jpg"
+					data-milkslide="galleria" data-gallery-id="5828"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1614.jpg"
+					data-milkslide="galleria" data-gallery-id="1614"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1608.jpg"
+					data-milkslide="galleria" data-gallery-id="1608"
+					title="Private external bathroom - room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/IMGS5881.jpg"
+					data-milkslide="galleria" data-gallery-id="5881"
+					title="Private external bathroom - room 'Castello'"></a>					
 				<a href="../media/img/photos/galleria/IMGS5826.jpg"
 					data-milkslide="galleria" data-gallery-id="5826"
 					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1578.jpg"
+					data-milkslide="galleria" data-gallery-id="1578"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1566.jpg"
+					data-milkslide="galleria" data-gallery-id="1566"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/IMGS5883.jpg"
+					data-milkslide="galleria" data-gallery-id="5883"
+					title="Private external bathroom - room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1574.jpg"
+					data-milkslide="galleria" data-gallery-id="1574"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1580.jpg"
+					data-milkslide="galleria" data-gallery-id="1580"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1585.jpg"
+					data-milkslide="galleria" data-gallery-id="1585"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1592.jpg"
+					data-milkslide="galleria" data-gallery-id="1592"
+					title="Room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1596.jpg"
+					data-milkslide="galleria" data-gallery-id="1596"
+					title="Private external bathroom - room 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1610.jpg"
+					data-milkslide="galleria" data-gallery-id="1610"
+					title="Private external bathroom - room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5832.jpg"
 					data-milkslide="galleria" data-gallery-id="5832"
 					title="Room 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5834.jpg"
 					data-milkslide="galleria" data-gallery-id="5834"
-					title="Room 'Castello'"></a>
-				<a href="../media/img/photos/galleria/IMGS5881.jpg"
-					data-milkslide="galleria" data-gallery-id="5881"
-					title="Room 'Castello'"></a>
-				<a href="../media/img/photos/galleria/IMGS5883.jpg"
-					data-milkslide="galleria" data-gallery-id="5883"
-					title="Room 'Castello'"></a>
-
-				<a href="../media/img/photos/galleria/IMGS1504.jpg"
-					data-milkslide="galleria" data-gallery-id="1504"
-					title="Room 'Castello'"></a>					
-				<a href="../media/img/photos/galleria/IMGS1505.jpg"
-					data-milkslide="galleria" data-gallery-id="1505"
 					title="Room 'Castello'"></a>
 
 					
