--- a/WebContent/it/camere.html
+++ b/WebContent/it/camere.html
@@ -51,7 +51,8 @@
 
 	<header>
 		<div>
-			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a Milano</a>
+			<a id="logo" href="index.html">Da Canal - Bed & Breakfast a
+				Milano</a>
 
 			<nav id="menu" class="camere">
 				<span class="toggler"><span class="togglerText">menu</span></span>
@@ -72,9 +73,9 @@
 				<ul>
 					<li class="it2"><a href="../it/camere.html"><span>IT</span></a></li>
 					<li class="en2"><a href="../en/camere.html"><span>EN</span></a></li>
-<!-- 					<li class="de2"><a href="../de/camere.html"><span>DE</span></a></li> -->
-<!-- 					<li class="fr2"><a href="../fr/camere.html"><span>FR</span></a></li> -->
-<!-- 					<li class="es2"><a href="../es/camere.html"><span>ES</span></a></li> -->
+					<!-- 					<li class="de2"><a href="../de/camere.html"><span>DE</span></a></li> -->
+					<!-- 					<li class="fr2"><a href="../fr/camere.html"><span>FR</span></a></li> -->
+					<!-- 					<li class="es2"><a href="../es/camere.html"><span>ES</span></a></li> -->
 				</ul>
 			</nav>
 		</div>
@@ -88,105 +89,153 @@
 				<h1>Le stanze sono situate su un unico piano indipendente</h1>
 			</hgroup>
 
-			<p>Le due stanze sono situate su un unico piano e si affacciano
-				sul salone comune pronto ad ospitarvi per la colazione mattutina e
-				offrirvi un dolce ristoro nelle altre ore del giorno. <br>Le ampie
-				camere, dove antico e moderno si intrecciano, offrono un ambiente
-				luminoso e confortevole. I dettagli scelti per personalizzare
-				ciascuna stanza sono stati pensati per rendere piacevole e
-				rigenerante il vostro soggiorno.</p>
-			<p>Entrambe le stanze sono molto ampie, su richiesta sarà quindi
+			<p>
+				Le due stanze sono situate su un unico piano e si affacciano sul
+				salone comune pronto ad ospitarvi per la colazione mattutina e
+				offrirvi un dolce ristoro nelle altre ore del giorno. <br>Le
+				ampie camere, dove antico e moderno si intrecciano, offrono un
+				ambiente luminoso e confortevole. I dettagli scelti per
+				personalizzare ciascuna stanza sono stati pensati per rendere
+				piacevole e rigenerante il vostro soggiorno.
+			</p>
+			<p>
+				Entrambe le stanze sono molto ampie, su richiesta sarà quindi
 				possibile aggiungere un terzo letto. Per chi volesse fumare, vi è la
 				possibilità di accedere ad un balconcino esterno dal quale godersi
-				la tranquillità e l'ombra del giardino privato.
-				<br>Tutti gli spazi sono coperti da wifi gratuito.</p>
+				la tranquillità e l'ombra del giardino privato. <br>Tutti gli
+				spazi sono coperti da wifi gratuito.
+			</p>
 			<aside>
 				<ul>
 					<li id="room1"><a href="#" class="opengallery"
-						data-gallery-id="5874"><h3>Camera “Duomo”</h3> <img
+						data-gallery-id="1529"><h3>Camera “Duomo”</h3> <img
 							src="../media/img/photos/camera_1.jpg" alt="" /></a></li>
 					<li id="room2"><a href="#" class="opengallery"
-						data-gallery-id="5826"><h3>Camera “Castello”</h3> <img
+						data-gallery-id="5828"><h3>Camera “Castello”</h3> <img
 							src="../media/img/photos/camera_2.jpg" alt="" /></a></li>
 				</ul>
 			</aside>
 			<figure id="gallery">
+				<a href="../media/img/photos/galleria/IMGS5880.jpg"
+					data-milkslide="galleria" data-gallery-id="5880"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1529.jpg"
+					data-milkslide="galleria" data-gallery-id="1529"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1520.jpg"
+					data-milkslide="galleria" data-gallery-id="1520"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1539.jpg"
+					data-milkslide="galleria" data-gallery-id="1539"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1547.jpg"
+					data-milkslide="galleria" data-gallery-id="1547"
+					title="Camera 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5874.jpg"
 					data-milkslide="galleria" data-gallery-id="5874"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/IMGS5876.jpg"
+					data-milkslide="galleria" data-gallery-id="5876"
+					title="Bagno della Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/IMGS5877.jpg"
+					data-milkslide="galleria" data-gallery-id="5877"
+					title="Bagno della Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1549.jpg"
+					data-milkslide="galleria" data-gallery-id="1549"
+					title="Camera 'Duomo'"></a>
+				<a href="../media/img/photos/galleria/DSCF1551.jpg"
+					data-milkslide="galleria" data-gallery-id="1551"
 					title="Camera 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5875.jpg"
 					data-milkslide="galleria" data-gallery-id="5875"
 					title="Camera 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5876.jpg"
-					data-milkslide="galleria" data-gallery-id="5876"
-					title="Camera 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5877.jpg"
-					data-milkslide="galleria" data-gallery-id="5877"
-					title="Camera 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5878.jpg"
 					data-milkslide="galleria" data-gallery-id="5878"
-					title="Camera 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5880.jpg"
-					data-milkslide="galleria" data-gallery-id="5880"
-					title="Camera 'Duomo'"></a>
+					title="Bagno della Camera 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS5934.jpg"
 					data-milkslide="galleria" data-gallery-id="5934"
-					title="Camera 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5935.jpg"
-					data-milkslide="galleria" data-gallery-id="5935"
-					title="Camera 'Duomo'"></a>
-				<a href="../media/img/photos/galleria/IMGS5937.jpg"
-					data-milkslide="galleria" data-gallery-id="5937"
 					title="Camera 'Duomo'"></a>
 				<a href="../media/img/photos/galleria/IMGS6177.jpg"
 					data-milkslide="galleria" data-gallery-id="6177"
 					title="Camera 'Duomo'"></a>
+
+				<a href="../media/img/photos/galleria/IMGS5828.jpg"
+					data-milkslide="galleria" data-gallery-id="5828"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1614.jpg"
+					data-milkslide="galleria" data-gallery-id="1614"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1608.jpg"
+					data-milkslide="galleria" data-gallery-id="1608"
+					title="Bagno privato esterno alla camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/IMGS5881.jpg"
+					data-milkslide="galleria" data-gallery-id="5881"
+					title="Bagno privato esterno alla camera 'Castello'"></a>					
 				<a href="../media/img/photos/galleria/IMGS5826.jpg"
 					data-milkslide="galleria" data-gallery-id="5826"
 					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1578.jpg"
+					data-milkslide="galleria" data-gallery-id="1578"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1566.jpg"
+					data-milkslide="galleria" data-gallery-id="1566"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/IMGS5883.jpg"
+					data-milkslide="galleria" data-gallery-id="5883"
+					title="Bagno privato esterno alla camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1574.jpg"
+					data-milkslide="galleria" data-gallery-id="1574"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1580.jpg"
+					data-milkslide="galleria" data-gallery-id="1580"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1585.jpg"
+					data-milkslide="galleria" data-gallery-id="1585"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1592.jpg"
+					data-milkslide="galleria" data-gallery-id="1592"
+					title="Camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1596.jpg"
+					data-milkslide="galleria" data-gallery-id="1596"
+					title="Bagno privato esterno alla camera 'Castello'"></a>
+				<a href="../media/img/photos/galleria/DSCF1610.jpg"
+					data-milkslide="galleria" data-gallery-id="1610"
+					title="Bagno privato esterno alla camera 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5832.jpg"
 					data-milkslide="galleria" data-gallery-id="5832"
 					title="Camera 'Castello'"></a>
 				<a href="../media/img/photos/galleria/IMGS5834.jpg"
 					data-milkslide="galleria" data-gallery-id="5834"
 					title="Camera 'Castello'"></a>
-				<a href="../media/img/photos/galleria/IMGS5881.jpg"
-					data-milkslide="galleria" data-gallery-id="5881"
-					title="Camera 'Castello'"></a>
-				<a href="../media/img/photos/galleria/IMGS5883.jpg"
-					data-milkslide="galleria" data-gallery-id="5883"
-					title="Camera 'Castello'"></a>
-					
-				<a href="../media/img/photos/galleria/IMGS1504.jpg"
-					data-milkslide="galleria" data-gallery-id="1504"
-					title="Camera 'Castello'"></a>					
-				<a href="../media/img/photos/galleria/IMGS1505.jpg"
-					data-milkslide="galleria" data-gallery-id="1505"
-					title="Camera 'Castello'"></a>
-			</figure>
-			<p>Camera “Duomo” (19 mq) Le due finestre che
-				caratterizzano la camera “Duomo” rendono l'ambiente particolarmente
-				luminoso. Il bagno con l'ampia doccia si trova all'interno della
-				stanza</p>
 
-			<p>Camera “Castello” (14 mq bagno escluso) La finestra della camera “Castello”
-				si affaccia sul grazioso giardino interno. Il bagno privato si trova
-				all'esterno, ad uso esclusivo degli ospiti della camera.</p>
+			</figure>
+			<p>Camera “Duomo” (19 mq) Le due finestre che caratterizzano la
+				camera “Duomo” rendono l'ambiente particolarmente luminoso. Il bagno
+				con l'ampia doccia si trova all'interno della stanza</p>
+
+			<p>Camera “Castello” (14 mq bagno escluso) La finestra della
+				camera “Castello” si affaccia sul grazioso giardino interno. Il
+				bagno privato si trova all'esterno, ad uso esclusivo degli ospiti
+				della camera.</p>
 		</section>
 
 	</article>
 	<footer>
-		<div><p class="contact">
-				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via Bernardo da
-					Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email: <a
-					href="mailto:dacanalmilano@gmail.com">dacanalmilano@gmail.com</a></span><em> - </em><span>Cellulare:
-					<a href="tel:+39.347.0652204">+39.347.0652204</a>
+		<div>
+			<p class="contact">
+				<strong>Da Canal B&amp;B</strong><em> - </em><span>Via
+					Bernardo da Canal, 24 - 20161 Milano (MI) ITALIA</span><br /> <span>Email:
+					<a href="mailto:dacanalmilano@gmail.com">dacanalmilano@gmail.com</a>
+				</span><em> - </em><span>Cellulare: <a href="tel:+39.347.0652204">+39.347.0652204</a>
 				</span>
 			</p>
 			<p class="socials">
-				<a href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165" class="facebook">Facebook</a>
-				<a href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a>
-				<a href="https://plus.google.com/u/0/111037845761365067591" class="googleplus"></a>
+				<a
+					href="https://www.facebook.com/pages/Da-Canal-Bed-Breakfast/627093367418165"
+					class="facebook">Facebook</a> <a
+					href="https://twitter.com/DaCanalBnB" class="twitter">Twitter</a> <a
+					href="https://plus.google.com/u/0/111037845761365067591"
+					class="googleplus"></a>
 			</p>
 		</div>
 	</footer>
