--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -88,21 +88,26 @@
 
 			<aside id="spazi">
 				<p>
-					<strong>Spazi a disposizione degli ospiti</strong>:
+					<strong>Spazi e servizi a disposizione degli ospiti</strong>:
 				</p>
 				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
 					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
-						colazioni</span></a> <a href="#" class="opengallery"
+						colazioni</span></a> 
+				<a href="#" class="opengallery"
 					data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>giardino
 						interno</span></a>
+						
+				<a href="#" class="opengallery"
+					data-gallery-id="DSCF1637"><img
+					src="../media/img/photos/servizi_bici.jpg" alt="" /><span>Noleggio bici gratuito</span></a>						
 			</aside>
 
 			<p>
-				<strong>Servizi offerti</strong>:
+				<strong>Servizi offerti</strong>:									
 			</p>
 			<ul id="standard">
-				<li>pulizia giornaliera delle camere</li>
+				<li>Servizio gratuito di noleggio bici (gradita la prenotazione)</li>
 				<li>biancheria della casa con cambio ogni 3 giorni, quella da bagno ogni giorno se necessario</li>
 				<li>colazione a buffet, servita in giardino durante la bella stagione. Sarà possibile accogliere richieste personalizzate nel caso di
 esigenze particolari</li>
@@ -141,6 +146,9 @@ giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 	</footer>
 
 	<figure id="gallery">
+	
+			<a href="../media/img/photos/galleria/DSCF1637.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Servizio gratuito di noleggio biciclette"></a>		
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
 			title="La sala colazione."></a>
