--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -82,19 +82,23 @@
 			</hgroup>
 			<aside id="spazi">
 				<p>
-					<strong>Spazi a disposizione degli ospiti</strong>:
+					<strong>Spaces and services for our guests</strong>:
 				</p>
 				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
-					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>breakfast room</span></a> <a href="#" class="opengallery"
+					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>breakfast room</span></a> 
+					<a href="#" class="opengallery"
 					data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/servizi_giardino.jpg" alt="" /><span>garden</span></a>
+				<a href="#" class="opengallery"
+					data-gallery-id="DSCF1637"><img
+					src="../media/img/photos/servizi_bici.jpg" alt="" /><span>free bikes rental</span></a>	
 			</aside>
 
 			<p>
 				<strong>Services include:</strong>:
 			</p>
 			<ul id="standard">
-				<li>daily room cleaning</li>
+				<li>free bikes rental</li>
 				<li>house linen is changed every 3 days</li>
 				<li>breakfast buffet</li>
 				<li>free wi-fi</li>
@@ -122,6 +126,9 @@
 	</footer>
 
 	<figure id="gallery">
+		<a href="../media/img/photos/galleria/DSCF1637.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Free bikes rental"></a>
+	
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
 			title="Breakfast room."></a>
