--- a/WebContent/it/casa.html
+++ b/WebContent/it/casa.html
@@ -99,7 +99,7 @@
 				Milano.</p>
 
 			<aside>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img
+				<a href="#" class="opengallery" data-gallery-id="DSCF1632"><img
 					src="../media/img/photos/casa_pict1.jpg" alt="" /></a> <a href="#"
 					class="opengallery" data-gallery-id="IMGS5880"><img
 					src="../media/img/photos/casa_pict2.jpg" alt="" /></a> <a href="#"
@@ -109,7 +109,7 @@
 					src="../media/img/photos/casa_pict4.jpg" alt="" /></a> <a href="#"
 					class="opengallery" data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/casa_pict5.jpg" alt="" /></a> <a href="#"
-					class="opengallery" data-gallery-id="IMGS5910"><img
+					class="opengallery" data-gallery-id="DSCF1632"><img
 					src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
 			</aside>
 
@@ -182,8 +182,7 @@
 
 	<figure id="gallery">
 		<a href="../media/img/photos/galleria/IMGS5826.jpg"
-			data-milkslide="galleria" data-gallery-id="01"
-			title="Camera 'Castello'"></a>
+			data-milkslide="galleria" data-gallery-id="01" title="Camera 'Castello'"></a>
 		<a href="../media/img/photos/galleria/IMGS5832.jpg"
 			data-milkslide="galleria" data-gallery-id="02" title="Camera 'Castello'"></a>
 		<a href="../media/img/photos/galleria/IMGS5834.jpg"
@@ -202,12 +201,25 @@
 			data-milkslide="galleria" data-gallery-id="09" title="Bagno privato interno alla camera 'Duomo'"></a>
 		<a href="../media/img/photos/galleria/IMGS5878.jpg"
 			data-milkslide="galleria" data-gallery-id="10" title="Bagno privato interno alla camera 'Duomo'"></a>
-		<a href="../media/img/photos/galleria/IMGS5880.jpg"
-			data-milkslide="galleria" data-gallery-id="IMGS5880" title="Camera 'Duomo'"></a>
 		<a href="../media/img/photos/galleria/IMGS5881.jpg"
 			data-milkslide="galleria" data-gallery-id="12" title="Bagno privato esterno alla camera 'Castello'"></a>
 		<a href="../media/img/photos/galleria/IMGS5883.jpg"
 			data-milkslide="galleria" data-gallery-id="13" title="Bagno privato esterno alla camera 'Castello'"></a>
+			
+		<a href="../media/img/photos/galleria/IMGS5880.jpg"
+			data-milkslide="galleria" data-gallery-id="IMGS5880" title="Camera 'Duomo'"></a>
+		<a href="../media/img/photos/galleria/DSCF1632.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1632" title="Sala colazioni"></a>	
+		<a href="../media/img/photos/galleria/DSCF1619.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1619" title="Sala colazioni"></a>
+		<a href="../media/img/photos/galleria/DSCF1628.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1628" title="Sala colazioni"></a>
+		<a href="../media/img/photos/galleria/DSCF1634.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1634" title="Sala colazioni"></a>
+		<a href="../media/img/photos/galleria/DSCF1637.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Servizio gratuito di noleggio biciclette"></a>				
+			
+
 		<a href="../media/img/photos/galleria/IMGS5887.jpg"
 			data-milkslide="galleria" data-gallery-id="14" title="Sala colazioni"></a>
 		<a href="../media/img/photos/galleria/IMGS1496.jpg"
@@ -255,7 +267,11 @@
 		<a href="../media/img/photos/galleria/IMGS6177.jpg"
 			data-milkslide="galleria" data-gallery-id="36" title="Camera 'Duomo'"></a>
 		<a href="../media/img/photos/galleria/DSCF1504.jpg"
-			data-milkslide="galleria" data-gallery-id="37" title="Camera 'Castello'"></a>			
+			data-milkslide="galleria" data-gallery-id="37" title="Camera 'Castello'"></a>
+			
+		
+			
+						
 		
 	</figure>
 
