--- a/WebContent/it/gallery.html
+++ b/WebContent/it/gallery.html
@@ -75,7 +75,7 @@
 			<figure id="gallery">
 
 				<h2>
-					<strong>Camera 'Uno'</strong>
+					<strong>Camera 'Duomo'</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5874.jpg"
 					id="photo_id5874" />
@@ -88,7 +88,7 @@
 				<img src="../media/img/photos/galleria/small/IMGS5880.jpg"
 					id="photo_id5880" />
 				<h2>
-					<strong>Camera 'Due'</strong>
+					<strong>Camera 'Castello'</strong>
 				</h2>
 				<img src="../media/img/photos/galleria/small/IMGS5826.jpg"
 					id="photo_id5826" />
