--- a/WebContent/en/casa.html
+++ b/WebContent/en/casa.html
@@ -95,7 +95,7 @@
 				by the bombings of the Second World War that hit Milan.</p>
 
 			<aside>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5902"><img
+				<a href="#" class="opengallery" data-gallery-id="DSCF1619"><img
 					src="../media/img/photos/casa_pict1.jpg" alt="" /></a> <a href="#"
 					class="opengallery" data-gallery-id="IMGS5880"><img
 					src="../media/img/photos/casa_pict2.jpg" alt="" /></a> <a href="#"
@@ -105,7 +105,7 @@
 					src="../media/img/photos/casa_pict4.jpg" alt="" /></a> <a href="#"
 					class="opengallery" data-gallery-id="IMGS5847"><img
 					src="../media/img/photos/casa_pict5.jpg" alt="" /></a> <a href="#"
-					class="opengallery" data-gallery-id="IMGS5910"><img
+					class="opengallery" data-gallery-id="DSCF1632"><img
 					src="../media/img/photos/casa_pict6.jpg" alt="" /></a>
 			</aside>
 
@@ -160,6 +160,18 @@
 	</footer>
 
 	<figure id="gallery">
+			<a href="../media/img/photos/galleria/DSCF1619.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1619" title="Breakfast room"></a>
+		<a href="../media/img/photos/galleria/DSCF1632.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1632" title="Breakfast room"></a>
+
+		<a href="../media/img/photos/galleria/DSCF1628.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1628" title="Breakfast room"></a>
+		<a href="../media/img/photos/galleria/DSCF1634.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1634" title="Breakfast room"></a>
+		<a href="../media/img/photos/galleria/DSCF1637.jpg"
+			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Free bikes rental"></a>
+	
 		<a href="../media/img/photos/galleria/IMGS5826.jpg"
 			data-milkslide="galleria" data-gallery-id="01" title="Room 'Castello'"></a>
 		<a href="../media/img/photos/galleria/IMGS5832.jpg"
