--- a/WebContent/en/servizi.html
+++ b/WebContent/en/servizi.html
@@ -84,7 +84,7 @@
 				<p>
 					<strong>Spaces and services for our guests</strong>:
 				</p>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
+				<a href="#" class="opengallery" data-gallery-id="DSCF1632"><img
 					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>breakfast room</span></a> 
 					<a href="#" class="opengallery"
 					data-gallery-id="IMGS5847"><img
@@ -129,6 +129,18 @@
 		<a href="../media/img/photos/galleria/DSCF1637.jpg"
 			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Free bikes rental"></a>
 	
+	
+			<a href="../media/img/photos/galleria/DSCF1632.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1632" title="Breakfast room."></a>
+				<a href="../media/img/photos/galleria/DSCF1634.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1634" title="Breakfast room."></a>
+	
+				<a href="../media/img/photos/galleria/DSCF1619.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1619" title="Breakfast room."></a>
+				<a href="../media/img/photos/galleria/DSCF1628.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1628" title="Breakfast room."></a>
+		
+	
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
 			title="Breakfast room."></a>
@@ -143,8 +155,7 @@
 		<a href="../media/img/photos/galleria/IMGS5897.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5897"
 			title="Breakfast room."></a>
-		<a href="../media/img/photos/galleria/.jpg" data-milkslide="galleria"
-			data-gallery-id="" title="Breakfast room."></a>
+
 		<a href="../media/img/photos/galleria/IMGS5900.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5900"
 			title="Breakfast room."></a>
