--- a/WebContent/it/servizi.html
+++ b/WebContent/it/servizi.html
@@ -90,7 +90,7 @@
 				<p>
 					<strong>Spazi e servizi a disposizione degli ospiti</strong>:
 				</p>
-				<a href="#" class="opengallery" data-gallery-id="IMGS5893"><img
+				<a href="#" class="opengallery" data-gallery-id="DSCF1632"><img
 					src="../media/img/photos/servizi_sala-colazioni.jpg" alt="" /><span>sala
 						colazioni</span></a> 
 				<a href="#" class="opengallery"
@@ -147,6 +147,17 @@ giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 	
 			<a href="../media/img/photos/galleria/DSCF1637.jpg"
 			data-milkslide="galleria" data-gallery-id="DSCF1637" title="Servizio gratuito di noleggio biciclette"></a>		
+
+			<a href="../media/img/photos/galleria/DSCF1632.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1632" title="La sala colazione."></a>
+				<a href="../media/img/photos/galleria/DSCF1634.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1634" title="La sala colazione."></a>
+	
+				<a href="../media/img/photos/galleria/DSCF1619.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1619" title="La sala colazione."></a>
+				<a href="../media/img/photos/galleria/DSCF1628.jpg" data-milkslide="galleria"
+			data-gallery-id="DSCF1628" title="La sala colazione."></a>
+
 		<a href="../media/img/photos/galleria/IMGS5893.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5893"
 			title="La sala colazione."></a>
@@ -160,8 +171,7 @@ giorni infrasettimanali 0,80euro all'ora dalle 8 alle 13)</li>
 		<a href="../media/img/photos/galleria/IMGS5897.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5897"
 			title="La sala colazione."></a>
-		<a href="../media/img/photos/galleria/.jpg" data-milkslide="galleria"
-			data-gallery-id="" title="La sala colazione."></a>
+
 		<a href="../media/img/photos/galleria/IMGS5900.jpg"
 			data-milkslide="galleria" data-gallery-id="IMGS5900"
 			title="La sala colazione."></a>
